[gd_scene load_steps=5 format=3 uid="uid://cupkewxu1hqof"]

[ext_resource type="Theme" uid="uid://drxb24hyfybfs" path="res://assets/theme/main_theme.tres" id="1_xmj0o"]
[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="2_awebt"]
[ext_resource type="FontData" uid="uid://bc255wpcxpuxe" path="res://assets/fonts/Grandstander-Bold.otf" id="3_x7vm3"]

[sub_resource type="Font" id="Font_04l3k"]
data/0 = ExtResource( "3_x7vm3" )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( "1_xmj0o" )
script = ExtResource( "2_awebt" )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.960784, 0.968627, 0.964706, 1)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
offset_left = 597.0
offset_top = 360.0
offset_right = 1962.0
offset_bottom = 1080.0

[node name="Title" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
offset_right = 1365.0
offset_bottom = 153.0
theme_override_fonts/font = SubResource( "Font_04l3k" )
text = "Hounds"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
offset_top = 157.0
offset_right = 1365.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 50
text = "A simple game based on the Hare and Hounds board game."

[node name="Spacing" type="Control" parent="ColorRect/CenterContainer/VBoxContainer"]
minimum_size = Vector2(0, 300)
offset_top = 224.0
offset_right = 1365.0
offset_bottom = 524.0

[node name="ButtonStart" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
offset_top = 528.0
offset_right = 1365.0
offset_bottom = 622.0
text = "Start"

[node name="ButtonExit" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
offset_top = 626.0
offset_right = 1365.0
offset_bottom = 720.0
theme_override_colors/font_pressed_color = Color(0.780392, 0.266667, 0.172549, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.317647, 0.211765, 1)
text = "Exit"

[node name="SideMenuText" type="Control" parent="ColorRect"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 49.0
offset_top = -297.0
offset_right = 654.0
offset_bottom = -45.0
grow_vertical = 0
metadata/_edit_layout_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/SideMenuText"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -90.0
offset_right = 269.0
offset_bottom = 90.0

[node name="Label" type="Label" parent="ColorRect/SideMenuText/VBoxContainer2"]
offset_right = 538.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.215686, 0.219608, 0.219608, 1)
theme_override_font_sizes/font_size = 40
text = "by Mark Joshwel"

[node name="Spacing" type="Control" parent="ColorRect/SideMenuText/VBoxContainer2"]
minimum_size = Vector2(0, 4)
offset_top = 54.0
offset_right = 538.0
offset_bottom = 58.0

[node name="GodotButton" type="LinkButton" parent="ColorRect/SideMenuText/VBoxContainer2"]
offset_top = 62.0
offset_right = 538.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(0.239216, 0.254902, 0.25098, 1)
action_mode = 0
text = "Created with Godot 4"

[node name="Spacing2" type="Control" parent="ColorRect/SideMenuText/VBoxContainer2"]
minimum_size = Vector2(0, 10)
offset_top = 113.0
offset_right = 538.0
offset_bottom = 123.0

[node name="SourceButton" type="LinkButton" parent="ColorRect/SideMenuText/VBoxContainer2"]
offset_top = 127.0
offset_right = 538.0
offset_bottom = 174.0
text = "Source Code (Public Domain)"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="button_up" from="ColorRect/CenterContainer/VBoxContainer/ButtonExit" to="." method="_on_button_exit_button_up"]
[connection signal="pressed" from="ColorRect/SideMenuText/VBoxContainer2/GodotButton" to="." method="_on_godot_button_pressed"]
[connection signal="pressed" from="ColorRect/SideMenuText/VBoxContainer2/SourceButton" to="." method="_on_source_button_pressed"]
